manifests/user/commento/db.yml
---
  apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: commento-db-data
    namespace: commento
    labels:
      app: db
  spec:
    storageClassName: rook-ceph-block
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: db
  namespace: commento
  labels:
    app: db
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: app
        image: postgres:11.2
        ports:
        - containerPort: 5432
        livenessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 32Mi
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: db-data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: commento-db-data
---
kind: Service
apiVersion: v1
metadata:
  name: db-svc
  namespace: commento
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: db
