manifests/user/commento/app.yml
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: commento
  namespace: commento
  labels:
    app: commento
spec:
  replicas: 2
  selector:
    matchLabels:
      app: commento
  template:
    metadata:
      labels:
        app: commento
    spec:
      containers:
      - name: app
        image: registry.gitlab.com/commento/commento:v1.6.2
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 32Mi
---
kind: Service
apiVersion: v1
metadata:
  name: commento-svc
  namespace: commento
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: commento
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: commento-ingress
  namespace: commento
spec:
  rules:
  - host: commento.underyx.me
    http:
      paths:
      - backend:
          serviceName: commento-svc
          servicePort: 80
        path: /
  tls:
  - hosts:
    - commento.underyx.me
    secretName: commento-tls
